make dropdowns look the same as other inputs and fix an odd alignment bug with typeahead inputs (fixes #98)

--- a/src/css/less/styles.less
+++ b/src/css/less/styles.less
@@ -47,6 +47,14 @@ span.required {
 	font-style: italic;
 }
 
+// Make select dropdowns and other similar elements have the same padding/border
+// as all other inputs
+select {
+	height: 38px; // 20 + padding + border
+	padding: 7px 6px;
+	border-width: 2px;
+}
+
 .button-column {
 	min-width: auto !important;
 	
