--- a/src/css/less/typeahead.less
+++ b/src/css/less/typeahead.less
@@ -27,7 +27,3 @@
 .tt-suggestion p {
 	margin: 0;
 }
-
-.twitter-typeahead-input {
-	vertical-align: inherit !important;
-}
